--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/fonts.css" />
   </head>
   <body>
@@ -84,5 +85,53 @@
         </div>
       </div>
     </header>
+
+
+    <section class="banner-section">
+      <div class="container">
+        <div class="banner-section__inner">
+          <div class="banner-section__slider">
+            <a class="banner-section__slider-item" href="#">
+              <img class="banner-section__slider-img" src="./images/banner-slider.jpg" alt="" />
+            </a>
+            <!-- <a class="banner-section__slider-item" href="#">
+              <img class="banner-section__slider-img" src="./images/banner-slider.jpg" alt="" />
+            </a>
+            <a class="banner-section__slider-item" href="#">
+              <img class="banner-section__slider-img" src="./images/banner-slider.jpg" alt="" />
+            </a>
+            <a class="banner-section__slider-item" href="#">
+              <img class="banner-section__slider-img" src="./images/banner-slider.jpg" alt="" />
+            </a>
+            <a class="banner-section__slider-item" href="#">
+              <img class="banner-section__slider-img" src="./images/banner-slider.jpg" alt="" />
+            </a>
+            <a class="banner-section__slider-item" href="#">
+              <img class="banner-section__slider-img" src="./images/banner-slider.jpg" alt="" />
+            </a> -->
+          </div>
+          <a class="banner-section__item sale-item" href="#">
+            <div class="sale-item__top">
+              <div class="sale-item__info">Акция</div>
+              <div class="sale-item__price">
+                <div class="price sale-item__price-new">190 000</div>
+                <div class="price sale-item__price-old">226 000</div>
+              </div>
+            </div>
+            <img class="sale-item__img" src="./images/content/sale-1.jpg" alt="">
+            <h5 class="sale-item__title">
+              Лодочный мотор Suzuki DF9.9BRS
+            </h5>
+            <p class="sale-item__footer">
+              Акция действует до
+              <span>31.08.2020</span>
+            </p>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <script src="./js/slick.min.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
