--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </header>
 
 
-    <section class="banner-section">
+    <section class="banner-section page-section">
       <div class="container">
         <div class="banner-section__inner">
           <div class="banner-section__slider">
@@ -131,6 +131,39 @@
       </div>
     </section>
 
+    <section class="search page-section">
+      <div class="container">
+        <div class="search__inner">
+          <div class="search__tabs">
+            <a class="search__tabs-item search__tabs-item--active" href="#tab-1">Поиск по номеру</a>
+            <a class="search__tabs-item" href="#tab-2">Поиск по марке</a>
+            <a class="search__tabs-item" href="#tab-3">Поиск по названию товара</a>
+          </div>
+          <div class="search__content">
+            <div id="tab-1" class="search__content-item search__content-item--active">
+              <form class="search__content-form">
+                <input class="search__content-input" type="text" placeholder="Введите номер">
+                <button class="search__content-btn" type="submit">Искать</button>
+              </form>
+            </div>
+            <div id="tab-2" class="search__content-item">
+              <form class="search__content-form">
+                <input class="search__content-input" type="text" placeholder="Введите марку">
+                <button class="search__content-btn" type="submit">Искать</button>
+              </form>
+            </div>
+            <div id="tab-3" class="search__content-item">
+              <form class="search__content-form">
+                <input class="search__content-input" type="text" placeholder="Введите название товара">
+                <button class="search__content-btn" type="submit">Искать</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./js/slick.min.js"></script>
     <script src="./js/main.js"></script>
   </body>
