--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick.css" />
     <link rel="stylesheet" href="css/fonts.css" />
   </head>
   <body>
@@ -86,13 +86,16 @@
       </div>
     </header>
 
-
     <section class="banner-section page-section">
       <div class="container">
         <div class="banner-section__inner">
           <div class="banner-section__slider">
             <a class="banner-section__slider-item" href="#">
-              <img class="banner-section__slider-img" src="./images/banner-slider.jpg" alt="" />
+              <img
+                class="banner-section__slider-img"
+                src="./images/banner-slider.jpg"
+                alt=""
+              />
             </a>
             <!-- <a class="banner-section__slider-item" href="#">
               <img class="banner-section__slider-img" src="./images/banner-slider.jpg" alt="" />
@@ -118,10 +121,12 @@
                 <div class="price sale-item__price-old">226 000</div>
               </div>
             </div>
-            <img class="sale-item__img" src="./images/content/sale-1.jpg" alt="">
-            <h5 class="sale-item__title">
-              Лодочный мотор Suzuki DF9.9BRS
-            </h5>
+            <img
+              class="sale-item__img"
+              src="./images/content/sale-1.jpg"
+              alt=""
+            />
+            <h5 class="sale-item__title">Лодочный мотор Suzuki DF9.9BRS</h5>
             <p class="sale-item__footer">
               Акция действует до
               <span>31.08.2020</span>
@@ -131,34 +136,120 @@
       </div>
     </section>
 
-    <section class="search page-section">
+    <div class="search page-section">
       <div class="container">
         <div class="search__inner">
           <div class="search__tabs">
-            <a class="search__tabs-item search__tabs-item--active" href="#tab-1">Поиск по номеру</a>
+            <a class="search__tabs-item search__tabs-item--active" href="#tab-1"
+              >Поиск по номеру</a
+            >
             <a class="search__tabs-item" href="#tab-2">Поиск по марке</a>
-            <a class="search__tabs-item" href="#tab-3">Поиск по названию товара</a>
+            <a class="search__tabs-item" href="#tab-3"
+              >Поиск по названию товара</a
+            >
           </div>
           <div class="search__content">
-            <div id="tab-1" class="search__content-item search__content-item--active">
+            <div
+              id="tab-1"
+              class="search__content-item search__content-item--active"
+            >
               <form class="search__content-form">
-                <input class="search__content-input" type="text" placeholder="Введите номер">
-                <button class="search__content-btn" type="submit">Искать</button>
+                <input
+                  class="search__content-input"
+                  type="text"
+                  placeholder="Введите номер"
+                />
+                <button class="search__content-btn" type="submit">
+                  Искать
+                </button>
               </form>
             </div>
             <div id="tab-2" class="search__content-item">
               <form class="search__content-form">
-                <input class="search__content-input" type="text" placeholder="Введите марку">
-                <button class="search__content-btn" type="submit">Искать</button>
+                <input
+                  class="search__content-input"
+                  type="text"
+                  placeholder="Введите марку"
+                />
+                <button class="search__content-btn" type="submit">
+                  Искать
+                </button>
               </form>
             </div>
             <div id="tab-3" class="search__content-item">
               <form class="search__content-form">
-                <input class="search__content-input" type="text" placeholder="Введите название товара">
-                <button class="search__content-btn" type="submit">Искать</button>
+                <input
+                  class="search__content-input"
+                  type="text"
+                  placeholder="Введите название товара"
+                />
+                <button class="search__content-btn" type="submit">
+                  Искать
+                </button>
               </form>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <section class="categories page-section">
+      <div class="container">
+        <div class="categories__inner">
+          <a class="categories__item" href="#">
+            <div class="categories__item-info">
+              <h4 class="categories__item-title">Квадрациклы</h4>
+              <p class="categories__item-text">Подробнее</p>
+            </div>
+            <div class="categories__item-img">
+              <img src="images/categories-1.png" alt="" />
+            </div>
+          </a>
+          <a class="categories__item" href="#">
+            <div class="categories__item-info">
+              <h4 class="categories__item-title">Гидроциклы</h4>
+              <p class="categories__item-text">Подробнее</p>
+            </div>
+            <div class="categories__item-img">
+              <img src="images/categories-2.png" alt="" />
+            </div>
+          </a>
+          <a class="categories__item" href="#">
+            <div class="categories__item-info">
+              <h4 class="categories__item-title">Катера</h4>
+              <p class="categories__item-text">Подробнее</p>
+            </div>
+            <div class="categories__item-img">
+              <img src="images/categories-3.png" alt="" />
+            </div>
+          </a>
+          <a class="categories__item" href="#">
+            <div class="categories__item-info">
+              <h4 class="categories__item-title">Снегоходы</h4>
+              <p class="categories__item-text">Подробнее</p>
+            </div>
+            <div class="categories__item-img">
+              <img src="images/categories-4.png" alt="" />
+            </div>
+          </a>
+          <a class="categories__item" href="#">
+            <div class="categories__item-info">
+              <h4 class="categories__item-title">Вездеходы</h4>
+              <p class="categories__item-text">Подробнее</p>
+            </div>
+            <div class="categories__item-img">
+              <img src="images/categories-5.png" alt="" />
+            </div>
+          </a>
+          <a class="categories__item" href="#">
+            <div class="categories__item-info">
+              <h4 class="categories__item-title">Двигатели</h4>
+              <p class="categories__item-text">Подробнее</p>
+            </div>
+            <div class="categories__item-img">
+              <img src="images/categories-6.png" alt="" />
+            </div>
+          </a>
         </div>
       </div>
     </section>
